--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-README.md
 target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -31,3 +30,11 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### PKI ###
+*.crt
+*.csr
+*.key
+
+# Direnv
+.envrc
